# portfolio_solver

./: .gitignore  Cargo.toml  LICENSE  README.md
config/: example.json  example2.json  example3.json  example4.json  example5.json  example6.json  m_g_quality_lb.json  m_hg_quality_lb.json  portfolio1.json  portfolio2.json  portfolio3.json  portfolio4.json  portfolio5.json  training.json
data/: m_g_quality_lb.csv  m_hg_quality_lb.csv  set_m_hg.csv  set_m_hg_p.csv
data/parallel_l_g/: kaminpar.csv  mt_kahip.csv  mt_kahypar_d_graph_64.csv
data/parallel_m_g/: kaminpar.csv  mt_kahip.csv  mt_kahypar_d_graph_1.csv  mt_kahypar_d_graph_16.csv  mt_kahypar_d_graph_2.csv  mt_kahypar_d_graph_4.csv  mt_kahypar_d_graph_8.csv  mt_kahypar_q_f_graph_1.csv  mt_kahypar_q_f_graph_16.csv  mt_kahypar_q_f_graph_2.csv  mt_kahypar_q_f_graph_4.csv  mt_kahypar_q_f_graph_8.csv  mt_metis.csv  parhip.csv  parmetis.csv
data/parallel_m_hg/: bipart.csv  mt_kahypar_d_1.csv  mt_kahypar_d_10.csv  mt_kahypar_d_16.csv  mt_kahypar_d_2.csv  mt_kahypar_d_4.csv  mt_kahypar_d_8.csv  mt_kahypar_q_f_1.csv  mt_kahypar_q_f_10.csv  mt_kahypar_q_f_16.csv  mt_kahypar_q_f_2.csv  mt_kahypar_q_f_4.csv  mt_kahypar_q_f_8.csv  zoltan.csv
data/sequential_m_g/: kaffpa_eco.csv  kaffpa_ecos.csv  kaffpa_fast.csv  kaffpa_fasts.csv  kaffpa_strong.csv  metis_k.csv  metis_r.csv  mt_kahypar_d_f_graph_10.csv  mt_kahypar_d_graph_10.csv  mt_kahypar_q_f_graph_10.csv  mt_kahypar_q_graph_10.csv  scotch.csv
data/sequential_m_hg/: hmetis_k.csv  hmetis_r.csv  kahypar_ca.csv  kahypar_k.csv  kahypar_r.csv  mondriaan.csv  mt_kahypar_d_f_10.csv  mt_kahypar_q_10.csv  patoh_d.csv  patoh_q.csv
data/test/: algo1.csv  algo2.csv  (+6 more)
scripts/: commons.py  performance_profiles.py  run_experiments.sh  time_plot.py
src/: csv_parser.rs  datastructures.rs  lib.rs  main.rs  mt_kahypar_parser.rs  portfolio_simulator.rs  solver.rs  test_utils.rs
tests/: csv_parser_test_best_per_instance_time.rs  csv_parser_test_dataframe.rs  csv_parser_test_invalid_rows.rs  csv_parser_test_missing_algo_for_instance.rs  csv_parser_test_quality_zero.rs  csv_parser_test_slowdown_ratio_filter.rs  portfolio_simulator_test_simple_model_simulation.rs  solver_test_seq_vs_par.rs  solver_test_simple_model.rs
(+5 files in other folders)
