[package]
name = "portfolio_solver"
version = "0.1.0"
authors = ["Noah Wahl <noah.ares@yahoo.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

grb = "1.3.0"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
anyhow = "1.0.51"
itertools = "0.10.5"
ndarray = "0.15.6"
polars = { version = "0.26.1", features = ["lazy", "cross_join", "dtype-struct", "ndarray"] }
