[package]
name = "portfolio_solver"
version = "0.1.0"
authors = ["Noah Wahl <noah.ares@yahoo.de>"]
edition = "2021"
rust-version = "1.66"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "portfolio_executor"
path = "src/bin/portfolio_executor.rs"

[[bin]]
name = "data_generator"
path = "src/bin/data_generator.rs"

[dependencies]

grb = "1.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
anyhow = { version = "1.0.51", features = ["backtrace"] }
itertools = "0.10.5"
ndarray = "0.15.6"
polars = { version = "0.26.1", features = ["lazy", "cross_join", "dtype-struct", "ndarray", "strings", "random", "concat_str"] }
rand = "0.8.5"
rand_distr = "0.4.3"
rand_chacha = "0.3.1"
clap = { version = "4.1.8", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
exitcode = "1.1.2"
log = "0.4.17"
env_logger = "0.10.0"
